# L1BallPGD

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
l1ballpgd/: data.py  pgd_constrained_lasso.py
scripts/: benchmark.py  run_synth.py
src/: data.py  fista_constrained_lasso.py  l1_projection.py  metrics.py  pgd_constrained_lasso.py
tests/: __init__.py  test_fista.py  test_l1_projection.py  test_pgd.py
